--- a/README.textile
+++ b/README.textile
@@ -8,19 +8,9 @@ A Redmine plugin to display activity notifications on Campfire.
 
 h1. Installation
 
+* You need Redmine 0.8.5 or above
 * Make sure you have the Tinder gem: sudo gem install tinder
 * Copy the plugin into Redmine’s /vendor/plugins/, edit /lib/notifier_hook.rb to set your Campfire settings, restart Apache and voilà.
-
-h1. Gotchas
-
-The 3 following hooks need a few changes which are currently in Redmine’s master core code.
-http://github.com/edavis10/redmine/commit/4ba83085072d69451149896002958c6ab479b0c8
-
-* controller_messages_new_after_save
-* controller_messages_reply_after_save
-* controller_wiki_edit_after_save
-
-These 3 hooks are used to send notifications about forum posts creation and wiki creation/edits.
 
 h1. To do
 
